FIX: some issues alignment

--- a/src/components/quiz/styles.scss
+++ b/src/components/quiz/styles.scss
@@ -8,6 +8,7 @@
   border: 1px solid #e4ecf7;
   border-radius: 8px;
   padding: 20px;
+  cursor: pointer;
 
   .card-style {
     margin-bottom: 50px;
